--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,7 @@
 version: '3'
 services:
  dockerapp:
+  container_name: "app"
   image: "bashmeunix/book:latest"
   ports:
    - "5000:5000"
@@ -12,6 +13,8 @@ services:
    - resolver
    - redis
  resolver:
+  container_name: "resolver"
   image: "bashmeunix/ptr:0.1"
  redis:
+  container_name: "redis"
   image: "redis:latest"
