--- a/jenkins.yml
+++ b/jenkins.yml
@@ -1,13 +1,15 @@
-dockerapp:
-  container_name: app
-  build: .
-  expose:
-    - "9090"
-  environment:
-    ENV: PROD
-  links:
-    - resolver
-    - redis
+version: '3'
+services:
+  dockerapp:
+    container_name: app
+    build: .
+    expose:
+      - "9090"
+    environment:
+      ENV: PROD
+    links:
+      - resolver
+      - redis
   resolver:
     container_name: "resolver"
     image: "bashmeunix/ptr:0.1"
