--- a/jenkins.yml
+++ b/jenkins.yml
@@ -11,8 +11,8 @@ services:
       - resolver
       - redis
   resolver:
-    container_name: "resolver"
+#    container_name: "resolver"
     image: "bashmeunix/ptr:0.1"
   redis:
-    container_name: "redis"
+#    container_name: "redis"
     image: "redis:latest"
