--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,8 +5,9 @@ services:
   image: "bashmeunix/book:latest"
   ports:
    - "5000:5000"
+   - "9000:9000"
   environment:
-   - ENV=UNIT
+   - ENV=DEV
   volumes:
    - "./app:/app"
    - "./entry-point.sh:/entry-point.sh"
