--- a/jenkins.yml
+++ b/jenkins.yml
@@ -1,7 +1,7 @@
 version: '3'
 services:
   dockerapp:
-    #container_name: app
+    container_name: app
     build: .
     expose:
       - "9090"
@@ -11,8 +11,8 @@ services:
       - resolver
       - redis
   resolver:
-#    container_name: "resolver"
+    container_name: "resolver"
     image: "bashmeunix/ptr:0.1"
   redis:
-#    container_name: "redis"
+    container_name: "redis"
     image: "redis:latest"
