--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,9 +5,9 @@ services:
   image: "bashmeunix/book:latest"
   ports:
    - "5000:5000"
-   - "9000:9000"
+   - "9090:9090"
   environment:
-   - ENV=DEV
+   - ENV=PROD
   volumes:
    - "./app:/app"
    - "./entry-point.sh:/entry-point.sh"
