--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,10 +2,10 @@ version: '3'
 services:
  dockerapp:
   container_name: "app"
-  image: "bashmeunix/book:latest"
+  build: .
   ports:
-   - "5000:5000"
-   - "9090:9090"
+   - "127.0.0.1:5000:5000"
+   - "127.0.0.1:9090:9090"
   environment:
    - ENV=PROD
   volumes:
