--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,9 +2,9 @@ version: '3'
 services:
  proxy:
   container_name: "proxy"
-  image: "nginx:latest"
+  image: "nginx:1.17.9"
   volumes:
-   - "./nginx.conf.d/:/etc/nginx/conf.d/"
+   - "./proxy/nginx.conf:/etc/nginx/conf.d/default.conf"
   ports:
    - "80:80"
   links:
