--- a/logstash.conf
+++ b/logstash.conf
@@ -8,6 +8,18 @@ input {
     codec => json
    }
  }
-output {
-  stdout { codec => rubydebug }
+
+filter {
+ mutate {
+    add_field => [ "My sring", "Hello Ok!!!" ]
+    }
+ if [docker][name] == "/proxy" {
+   mutate { replace => { type => "nginx" } }
+   grok {match => { "message" => "%{COMBINEDAPACHELOG}" } }
  }
+}
+
+output {
+  elasticsearch { hosts => ["elasticsearch:9200"] }
+  stdout { codec => rubydebug }
+}
