last before remove elk

--- a/logstash.conf
+++ b/logstash.conf
@@ -9,17 +9,55 @@ input {
    }
  }
 
-filter {
- mutate {
-    add_field => [ "My sring", "Hello Ok!!!" ]
-    }
- if [docker][name] == "/proxy" {
-   mutate { replace => { type => "nginx" } }
-   grok {match => { "message" => "%{COMBINEDAPACHELOG}" } }
+#filter {
+# mutate {
+#    add_field => [ "My sring", "Hello Ok!!!" ]
+#    }
+# if [docker][name] == "/proxy" {
+#   mutate { replace => { type => "nginx" } }
+#   grok {match => { "message" => "%{COMBINEDAPACHELOG}" } }
+# }
+#}
+
+
+
+input {
+  syslog {
+      port => 5044
+      type => syslog
+   }
  }
+
+filter {
+  if [program] == "nginx_access" {
+    grok {
+      patterns_dir => "/home"
+      match => { "message" => "%{NGINX_ACCESS}" }
+      remove_tag => ["nginx_access", "_grokparsefailure"]
+      add_field => {
+        "type" => "nginx_access"
+      }
+      remove_field => ["program"]
+    }
+
+    date {
+      match => ["time_local", "dd/MMM/YYYY:HH:mm:ss Z"]
+      target => "@timestamp"
+      remove_field => "time_local"
+    }
+
+    useragent {
+      source => "user_agent"
+      target => "useragent"
+      remove_field => "user_agent"
+    }
+  }
 }
 
 output {
-  elasticsearch { hosts => ["elasticsearch:9200"] }
+  elasticsearch { hosts => ["elasticsearch:9200"]
+                  index => "logstash-%{+YYYY.MM.dd}"
+   }
   stdout { codec => rubydebug }
 }
+
